--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-rate-limit": "^7.2.0",
     "mongoose": "^8.2.2"
   }
 }
