--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.24",
     "parallax": "^0.0.0",
     "react": "^18.2.0",
