--- a/Client/package.json
+++ b/Client/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "axios": "^1.6.8",
+    "firebase": "^10.10.0",
     "framer-motion": "^11.0.24",
     "parallax": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-parallax": "^3.5.1"
+    "react-parallax": "^3.5.1",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
