--- a/Client/package.json
+++ b/Client/package.json
@@ -12,12 +12,17 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "@nextui-org/react": "^2.3.5",
+    "@rpldy/upload-button": "^1.8.0",
+    "@rpldy/upload-preview": "^1.8.0",
+    "@rpldy/uploady": "^1.8.0",
     "axios": "^1.6.8",
     "cloudinary": "^2.2.0",
     "firebase": "^10.10.0",
     "framer-motion": "^11.1.7",
     "parallax": "^0.0.0",
+    "rc-progress": "^4.0.0",
     "react": "^18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-parallax": "^3.5.1",
