--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,7 @@
     "express": "^4.19.2",
     "express-openid-connect": "^2.17.1",
     "express-rate-limit": "^7.2.0",
-    "mongoose": "^8.2.2"
+    "mongoose": "^8.2.2",
+    "nodemon": "^3.1.2"
   }
 }
