Added assign upload functionality and when an assignment is sucessfully uploaded, an email will be sent to the admin

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,3 @@
 MONGO_URI = mongodb+srv://sharugeshwaran:123Waran321%40@dribble.oyqaoj8.mongodb.net/Dribble
+USER_MAIL_AUTH = dribblecapstone@gmail.com
+USER_MAIL_PASS = ubsd ezaq leqm agto
