--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-openid-connect": "^2.17.1",
     "express-rate-limit": "^7.2.0",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.2.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.2"
   }
 }
