Added assign upload functionality and when an assignment is sucessfully uploaded, an email will be sent to the admin

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,6 @@
 MONGO_URI = mongodb+srv://sharugeshwaran:123Waran321%40@dribble.oyqaoj8.mongodb.net/Dribble
 USER_MAIL_AUTH = dribblecapstone@gmail.com
 USER_MAIL_PASS = ubsd ezaq leqm agto
+CLOUD_NAME = df5gqodoq
+SECRET_API = 3ob5mPmNWm2lUgIsa6nFDU4IkhI
+API_KEY = 794122859766147
