--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "canvas": "^2.11.2",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -11,6 +12,8 @@
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "pdfkit": "^0.15.0",
+    "streamifier": "^0.1.1"
   }
 }
