--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,7 @@
     "cloudinary": "^2.2.0",
     "firebase": "^10.10.0",
     "framer-motion": "^11.1.7",
+    "html-to-image": "^1.11.11",
     "parallax": "^0.0.0",
     "rc-progress": "^4.0.0",
     "react": "^18.2.0",
@@ -26,7 +27,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-parallax": "^3.5.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
